# shipments-recruting

./: .gitignore
backend/: README.md  pyproject.toml
backend/shipments_manager/: manage.py
backend/shipments_manager/api/: urls.py
backend/shipments_manager/api/shipments/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/shipments_manager/api/shipments/migrations/: 0001_initial.py  0002_shipment_status.py  0003_alter_shipment_number.py
backend/shipments_manager/shipments/: admin.py  models.py
backend/shipments_manager/shipments_manager/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/form/: Button.tsx  Input.tsx
frontend/src/lib/: camelize.ts
frontend/src/lib/api/: createShipment.ts  deleteShipment.ts  getShipments.ts  updateShipment.ts
frontend/src/shipments/: ShipmentCard.tsx  ShipmentCardForm.tsx  Shipments.tsx
